fixing z-index

--- a/app/client/gui-elements.less
+++ b/app/client/gui-elements.less
@@ -7,10 +7,14 @@
 }
 
 .pp--settings {
+  height: 100%;
   background-color: var(--bg-list);
   margin-top: 0;
   margin-bottom: 0;
   padding: 30px;
+  display: flex;
+  align-items: center;
+
   .quickinput svg {
     stroke-width: 2px;
     fill: var(--text-sidebar);
