--- a/app/imports/ui/PdfViewer/PdfViewerStyle.less
+++ b/app/imports/ui/PdfViewer/PdfViewerStyle.less
@@ -16,30 +16,7 @@
 
   object {
     opacity: 0;
-    animation: fadein 0.5s linear 0.2s forwards;
-  }
-
-  .spinner {
-    pointer-events: none;
-    opacity: 0;
-    width: 10%;
-    height: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    svg {
-      fill: var(--accent);
-      stroke: none;
-    }
-  }
-
-  &.loading {
-    .spinner {
-      transform: scale(1);
-      opacity: 1;
-      animation: scale-up 0.7s ease-in-out forwards;
-    }
+    animation: fadein 0.5s cubic-bezier(0.54, 0, 0.38, 1) 0.2s forwards;
   }
 }
 
@@ -50,16 +27,5 @@
 
   100% {
     opacity: 1;
-  }
-}
-
-@keyframes scale-up {
-  0% {
-    transform: scale(0.1);
-  }
-
-  100% {
-    opacity: 0;
-    transform: scale(200);
   }
 }
